# dekanats-export

./: README.md  export.py  pyproject.toml
