[tool.poetry]
name = "dekanats-export"
version = "2023.1"
description = ""
authors = ["Maximilian Linhoff <maximilian.linhoff@tu-dortmund.de>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
openpyxl = "^3.1.1"
schedule = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
